# signality

./: CMakeLists.txt  README.md  cfbind.hpp  fnc.control.hpp  main.cpp  sign.stream.in.hpp  signality.hpp
test/: CMakeLists.txt  signality_test.cpp
